test for production

--- a/.env
+++ b/.env
@@ -4,7 +4,13 @@ ENCRYPTION_SECRET_KEY=mysecretkey12345
 ENCRYPTION_SECRET_IV=mysecretiv123456
 
 # Database Configuration
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=
-DB_NAME=smart 
+# DB_HOST=localhost
+# DB_USER=root
+# DB_PASSWORD=
+# DB_NAME=smart 
+
+
+DB_HOST=sql100.infinityfree.com
+DB_USER=if0_40946419
+DB_PASSWORD=j9Sbh0bZjK5
+DB_NAME=if0_40946419_test_salespro
