test for production V.0.1

--- a/.env
+++ b/.env
@@ -9,8 +9,8 @@ ENCRYPTION_SECRET_IV=mysecretiv123456
 # DB_PASSWORD=
 # DB_NAME=smart 
 
-
-DB_HOST=sql100.infinityfree.com
-DB_USER=if0_40946419
-DB_PASSWORD=j9Sbh0bZjK5
-DB_NAME=if0_40946419_test_salespro
+DB_HOST=217.21.87.1
+DB_USER=u548515174_salespro
+DB_PASSWORD=x=4nb9Lck5kH
+DB_NAME=u548515174_testing
+DB_PORT=3306
