--- a/.env
+++ b/.env
@@ -3,14 +3,14 @@ FLASK_SECRET_KEY=mysecretkey12345
 ENCRYPTION_SECRET_KEY=mysecretkey12345
 ENCRYPTION_SECRET_IV=mysecretiv123456
 
-# Database Configuration
-# DB_HOST=localhost
-# DB_USER=root
-# DB_PASSWORD=
-# DB_NAME=smart 
+Database Configuration
+DB_HOST=localhost
+DB_USER=root
+DB_PASSWORD=
+DB_NAME=smart 
 
-DB_HOST=217.21.87.1
-DB_USER=u548515174_salespro
-DB_PASSWORD=x=4nb9Lck5kH
-DB_NAME=u548515174_testing
-DB_PORT=3306
+# DB_HOST=217.21.87.1
+# DB_USER=u548515174_salespro
+# DB_PASSWORD=x=4nb9Lck5kH
+# DB_NAME=u548515174_testing
+# DB_PORT=3306
