testing the app on internet

--- a/.env
+++ b/.env
@@ -3,14 +3,15 @@ FLASK_SECRET_KEY=mysecretkey12345
 ENCRYPTION_SECRET_KEY=mysecretkey12345
 ENCRYPTION_SECRET_IV=mysecretiv123456
 
-Database Configuration
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=
-DB_NAME=smart 
+## Database Configuration
+# DB_HOST=localhost
+# DB_USER=root
+# DB_PASSWORD=
+# DB_NAME=smart 
 
-# DB_HOST=217.21.87.1
-# DB_USER=u548515174_salespro
-# DB_PASSWORD=x=4nb9Lck5kH
-# DB_NAME=u548515174_testing
-# DB_PORT=3306
+##  bisque-shrew-463666.hostingersite.com -> Databases
+DB_HOST=217.21.95.30
+DB_USER=u548515174_surya_qa
+DB_PASSWORD=0C;5^+WozAj
+DB_NAME=u548515174_smart_qa
+DB_PORT=3306
